# neutrino

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: client.rs  lib.rs  main.rs  output.rs
src/auth/: cache.rs  mod.rs  oauth2.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs
tests/: auth.rs  cli.rs  client_headers.rs  mock_trino.rs  output.rs
