[package]
name = "neutrino-cli"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/lightconelabs/neutrino"
description = "Neutrino CLI tool"
homepage = "https://github.com/lightconelabs/neutrino"
license = "MIT"

[[bin]]
name = "neutrino"
path = "src/main.rs"

[lib]
name = "neutrino"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tabled = "0.17"
tiny_http = "0.12"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
